# Reaction-Model-Electronic-Structure-Data-Schema

./: README.md  example.py  pyproject.toml
src/rmess/: schema.py
src/schema/: mech.py  metadata.py  rmess.py  schema.py  species.py
